# ms_secret_config

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  migration.Dockerfile  pyproject.toml
kuber/: app_config.yaml  app_deployment.yaml  app_secrets.yaml  app_service.yaml  ingress.yaml  migration_job.yaml  postgres_pvc_pv.yaml  postgres_service.yaml  postgres_stateful.yaml  test.json
kuber/postgres_chart/: values.yaml
kuber/postgres_chart/templates/: NOTES.txt  config.yaml  deployment.yaml  secrets.yaml  service.yaml
migration/: env.py
migration/versions/: 5135779605ae_first_revision.py  89297c388e57_add_user_tb.py
user_storage/: __main__.py  config.py  containers.py
user_storage/adapter/: db_adapter.py
user_storage/api/probes/: healthchecks.py
user_storage/api/user/: user.py
user_storage/models/: db_model.py  user.py
